Update java code in normGUI to avoid use of deprecated java features
Il s'agit d'eviter les warnings de type:
  ..\khiops\src\Norm\NormGUI\src\normGUI\widgets\doubleWidgets\GUIDoubleElementComboBox.java:
   warning: [removal] Double(String) in Double has been deprecated and marked for removal
                                  dParams[i] = new Double(sParams[i]);

Il suffit de remplacer les patterns de type `value = new Double(string)` par `value = Double.valueOf(String)`.
La methode valueOf est disponible depuis java 1.5 (2004).

Cela concerne les types Double, Float, Integer, Character, Boolean

A priori simple à résoudre, en remplaçant new Double(string) par Double.valueOf(string)